syntax = "proto3";

package merchant;

import "commons.proto";
import "merchant_branch.proto";

message UpdateMerchantInput {
    int32 id = 1;
    Merchant data = 2;
}

message InputCreateRequest {
    string name = 1;
    string phone = 2;
    string address = 3;
    int32 userId = 4;
    optional int32 cityCode = 5;
    optional int32 districtCode = 6;
    optional int32 wardCode = 7;
}

message Merchant {
    int32 id = 1;
    string name = 2;
    string phone = 3;
    string address = 4;
    string createdAt = 5;
    string updatedAt = 6;
    int32 userId = 7;
    optional int32 cityCode =  8;
    optional int32 districtCode =  9;
    optional int32 wardCode = 10;
}

message MerchantEdge {
    Merchant node = 1;
    string cursor = 2;
}  

message FindMerchantsPayload {
    repeated MerchantEdge edges = 1;
    commons.PageInfo pageInfo = 2;
}


message NotificationServiceFindMerchantAndBranchDetail {
    Merchant merchant = 1;
    merchant_branch.MerchantBranch branch = 2;
}


service MerchantServiceGrpc {
    rpc find (commons.Query) returns (FindMerchantsPayload) {}
    rpc findOne (commons.Query) returns (Merchant) {}
    rpc create (InputCreateRequest) returns (Merchant) {}
    rpc countMerchants (InputCreateRequest) returns (commons.Count) {}
    rpc findById (commons.Id) returns (Merchant) {}
    rpc findMerchantAndBranchDetailByBranchServiceId (commons.Id) returns (NotificationServiceFindMerchantAndBranchDetail) {}
}
