syntax = "proto3";

package test_merchant;

import "commons.proto";

service TestMerchantServiceGrpc {
    rpc create (InputCreateRequest) returns (CreateResponse) {}
    rpc findMerchants (commons.Query) returns (FindMerchantPayload) {}
    rpc findMerchantById (commons.Id) returns (Merchant) {}
    rpc findOneMerchant (InputCreateRequest) returns (CreateResponse) {}
    rpc countMerchants (InputCreateRequest) returns (CreateResponse) {}
    rpc updateMerchant (UpdateMerchantInput) returns (Merchant) {}
}

message UpdateMerchantInput {
    int32 id = 1;
    Merchant data = 2;
}

message FindMerchantPayload {
    repeated Merchant merchants = 1;
}

message InputCreateRequest {
    string email = 1;
    string password = 2;
    string confirmPassword = 3;
    string fullName = 4;
    string phone = 5;
    string merchantPhone = 6;
    string merchantName = 7;
    string merchantAddress = 8;
    int32 cityCode = 9;
    int32 districtCode = 10;
    int32 wardCode = 11;
    string merchantSubdomain = 12;
    int32 userId = 13;
}

message CreateResponse {
    Merchant merchant = 1;
    MerchantBranch merchantBranch = 2;
}

message Merchant {
    int32 id = 1;
    string name = 2;
    string phone = 3;
    string address = 4;
    optional int32 cityCode = 5;
    optional int32 districtCode = 6;
    optional int32 wardCode = 7;
    int32 createdAt = 8;
    int32 updatedAt = 9;
    int32 userId = 10;
}

message MerchantBranch {
    int32 id = 1;
    string name = 2;
    string phone = 3;
    string address = 4;
    optional int32 cityCode = 5;
    optional int32 districtCode = 6;
    optional int32 wardCode = 7;
    int32 createdAt = 8;
    int32 updatedAt = 9;
    int32 merchantId = 10;
}
